--- a/docs/layout/layout-small-single-column.html
+++ b/docs/layout/layout-small-single-column.html
@@ -111,7 +111,10 @@
                         <h3 class="ou-smaller">Navigation</h3>
                         <ul class="ou-list ou-list--links">
                             <li>
-                                <a href="../navigation/nav-top.html">Back to top</a>
+                                <a href="../navigation/nav-top-link.html">Back to top link</a>
+                            </li>
+                            <li>
+                                <a href="../navigation/nav-top-footer-button.html">Footer back to top button</a>
                             </li>
                             <li>
                                 <a href="../navigation/nav-breadcrumbs.html">Breadcrumbs</a>
