--- a/gui/objects.various.css
+++ b/gui/objects.various.css
@@ -63,6 +63,20 @@ h4.ou-smaller {font-size: 1em !important;}
 
 /*
 -------------------------------------------
+	Links
+-------------------------------------------
+*/
+
+
+h1 a,
+h2 a,
+h3 a,
+h4 a,
+h5 a,
+h6 a {text-decoration:none;}
+
+/*
+-------------------------------------------
 	Misc
 -------------------------------------------
 */
