--- a/docs/layout/grid.html
+++ b/docs/layout/grid.html
@@ -135,9 +135,7 @@
                     <li>
                         <a href="../navigation/nav-sections.html">Sections</a>
                     </li>
-                    <li>
-                        <a href="../navigation/nav-sections-bar.html">Sections - bar</a>
-                    </li>
+                    
                     <li>
                         <a href="../navigation/nav-site-ident.html">Site ident</a>
                     </li>
@@ -152,7 +150,7 @@
                         <a href="../content/articles.html">Articles</a>
                     </li>
                     <li>
-                        <a href="../content/boxes.html">Boxes</a>
+                        <a href="../content/boxes.html">Boxes and Notifications</a>
                     </li>
                     <li>
                         <a href="../content/buttons.html">Buttons</a>
