--- a/docs/layout/layout-single-column.html
+++ b/docs/layout/layout-single-column.html
@@ -131,9 +131,7 @@
                             <li>
                                 <a href="../navigation/nav-sections.html">Sections</a>
                             </li>
-                            <li>
-                                <a href="../navigation/nav-sections-bar.html">Sections - bar</a>
-                            </li>
+                            
                             <li>
                                 <a href="../navigation/nav-site-ident.html">Site ident</a>
                             </li>
@@ -148,7 +146,7 @@
                                 <a href="../content/articles.html">Articles</a>
                             </li>
                             <li>
-                                <a href="../content/boxes.html">Boxes</a>
+                                <a href="../content/boxes.html">Boxes and Notifications</a>
                             </li>
                             <li>
                                 <a href="../content/buttons.html">Buttons</a>
