--- a/gui/components.nav.css
+++ b/gui/components.nav.css
@@ -104,21 +104,21 @@
 
 .ou-sections a.ou-selected,
 .ou-sections a.ou-selected:hover {
-    color: #036;
+    color: #0e56a7; 
     background-color: transparent;
 	font-weight:bold;
-	border-bottom:2px solid #036;
+	border-bottom:2px solid #0e56a7; 
 }
 
 .ou-sections a:hover {
 	color:#000;
 	background-color: transparent; 
 	text-decoration:none;
-	border-bottom:2px solid #ccc;
+	border-bottom:2px solid #737373;
 }
 
 .ou-sections a:visited {
-	color:#039;
+	color:#0e56a7; 
 	background-color: transparent;
 }
 
@@ -126,7 +126,7 @@
 /* bar */
 
 .ou-sections--bar {
-	background-color: #eaeaf4;
+	background-color: #e9eaea;
 	color: #000;
 	width:100%;
 	max-width:none;
@@ -156,11 +156,11 @@
 
 .ou-sections--bar a.ou-selected,
 .ou-sections--bar a.ou-selected:hover {
-    color: #326fb4;
+    color: #0e56a7; 
     background-color: #fff;
 	font-weight:bold;
 	border-bottom:1px solid #fff;
-	border-top:2px solid #326fb4;
+	border-top:2px solid #0e56a7; 
 	margin-bottom:-1px;
 }
 
@@ -189,7 +189,7 @@
 	padding:0;
 	margin-left:0;
 	padding-bottom:15px;
-	border-bottom:1px solid #ddd;
+	border-bottom:1px solid #E9EAEA;
 	column-count:2;
     column-gap: 20px;
 	-moz-columns-count:2;
@@ -216,7 +216,7 @@
 .ou-toc a:hover {text-decoration:underline;}
 
 .ou-toc a:before {
-	color:#ddd;
+	color:#737373;
 	background-color: transparent;
 	font-family:"Hiragino Mincho ProN";
 	font-size: 10px;
