--- a/gui/objects.colours.css
+++ b/gui/objects.colours.css
@@ -30,7 +30,7 @@
 .ou-bg-grey {background-color:#4d4d4d !important;} 
 .ou-bg-turquoise {background-color:#068293 !important;}
 .ou-bg-light-blue {background-color:#eef3f9 !important;} 
-.ou-bg-light-grey {background-color:#737373 !important;}
+.ou-bg-light-grey {background-color:#E9EAEA !important;}
 
 /* UI colours */
 
